förhoppningsvis allt för labb 2 klart, TODO: lägg in i mappar för att förbättra filstrukturen